--- a/style.css
+++ b/style.css
@@ -2,19 +2,13 @@
     box-sizing: border-box;
   }
   
-  /* 
-    These rules apply to actual HTML elements with no labelling!
-    So: they style the tags directly
-  */
-  
   html {
     background-color: #fff;
     font-size: 16px;
     min-width: 300px;
     overflow-x: hidden;
     overflow-y: scroll;
-  
-    /* these are specific to different browsers */
+
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
@@ -49,14 +43,6 @@
     accent-color: hsla(120, 100%, 50%, 0.482);
   }
   
-  /*
-    - These styles use 'class names'
-    - You can apply them by using the 'class' attribute on your HTML
-    - like this: <div class="wrapper">
-    - note that the period vanishes there!
-  */
-  
-  
   .wrapper {
     min-height: 100vh;
     display: flex;
@@ -80,45 +66,22 @@
     padding-bottom: 1.5rem;
   }
   
-  
-  /*
-    This rule implies that the H1 tag lives within another HTML tag
-    It "inherits" some rules from the above
-    Those rules won't apply to an h1 that's outside a block with the class of 'header'
-  */
-  
   .header h1 {
     display: block;
-    /* this will push other blocks out of the way */
-  
-    /* colors */
     background-color: #8ad4ff;
-    color: #4a4a4a;
+    color: #000000;
   
-    /* shapes */
     border-radius: 6px;
     font-size: 1.5rem;
     padding: 1.25rem;
-    margin:0; /* removing the margin on h1 tags means the header pins to the top if we move it around */
-  
-  
-    /* box-shadows are fancy */
+    margin:0;
+
     box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
   }
   
-  
-  /*
-    Rules can be combined on a block to apply the 'cascade' in order
-    So you can use two classnames in a single class attribute
-    like: <div class="box section">
-  
-    Rules may combine in unexpected ways - remember that the LAST thing written in this file will have "priority"
-    And will be what displays in your client
-  */
-  
   .box {
     background-color: rgba(239, 239, 239, 0.40);
-    border: 2px dashed;
+    /* border: 2px dashed; */
     border-radius: 4px;
   
     width: fit-content;
@@ -142,12 +105,6 @@
     max-width: 450px;
   }
   
-  /*
-    This block is actually dependent on the "container" block having a flex set on it
-    and the "wrapper" block displaying as a flex column with a "vertical height" (vh) of 100.
-    That serves to cram the footer to the bottom of the page.
-  */
-  
   .footer {
     flex-shrink: 0;
     padding: 1rem;
@@ -157,19 +114,12 @@
   }
   
   .footer a {
-    color: rgba(255, 224, 138, 1);
+    color: rgb(54, 53, 53);
     text-decoration: underline;
   }
   
-  /*
-    This is an example of a 'pseudoclass'
-    In this instance, it says what to do if a mouse hovers over a link
-    This is pretty desktop-specific, since there's no hover function on touchscreens
-  */
   .footer a:hover {
-    /* Hue, saturation, luminosity, alpha */
     background-color: hsla(0, 0%, 90%, 0.15);
-    /* red, green, blue, alpha */
     color: rgb(246, 169, 93);
     text-decoration: none;
   }
@@ -180,8 +130,6 @@
     margin-bottom: 5px;
   }
   
-  
-  /* Deploy this with images as direct "children" and the images should pop into shape */
   .grid {
     display: flex;
     justify-content: space-evenly;
