--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@
   .box {
     background-color: rgba(239, 239, 239, 0.40);
     /* border: 2px dashed; */
-    border-radius: 4px;
+    /* border-radius: 4px; */
   
     width: fit-content;
     height:fit-content;
