--- a/style.css
+++ b/style.css
@@ -2,11 +2,6 @@
   box-sizing: border-box;
 }
 
-/* 
-  These rules apply to actual HTML elements with no labelling!
-  So: they style the tags directly
-*/
-
 html {
   background-color: rgb(234, 239, 241);
   font-size: 16px;
@@ -49,14 +44,6 @@ form {
   accent-color: hsla(305, 100%, 50%, 0.482);
 }
 
-/*
-  - These styles use 'class names'
-  - You can apply them by using the 'class' attribute on your HTML
-  - like this: <div class="wrapper">
-  - note that the period vanishes there!
-*/
-
-
 .wrapper {
   min-height: 100vh;
   display: flex;
@@ -80,41 +67,16 @@ form {
   padding-bottom: 1.5rem;
 }
 
-
-/*
-  This rule implies that the H1 tag lives within another HTML tag
-  It "inherits" some rules from the above
-  Those rules won't apply to an h1 that's outside a block with the class of 'header'
-*/
-
 .header h1 {
   display: block;
-  /* this will push other blocks out of the way */
-
-  /* colors */
   background-color: #8ab3ff;
   color: #ffffff;
-
-  /* shapes */
   border-radius: 6px;
   font-size: 1.5rem;
   padding: 1.25rem;
-  margin:0; /* removing the margin on h1 tags means the header pins to the top if we move */
-
-
-  /* box-shadows are fancy */
+  margin:0;
   box-shadow: 0 0.5em 1em -0.125em rgba(136, 229, 248, 0.777), 0 0 0 1px rgb(50, 102, 255);
 }
-
-
-/*
-  Rules can be combined on a block to apply the 'cascade' in order
-  So you can use two classnames in a single class attribute
-  like: <div class="box section">
-
-  Rules may combine in unexpected ways - remember that the LAST thing written in this file will have "priority"
-  And will be what displays in your client
-*/
 
 .box {
   background-color: rgb(235, 235, 235);
@@ -145,12 +107,6 @@ form {
   flex-direction: column;
 }
 
-/*
-  This block is actually dependent on the "container" block having a flex set on it
-  and the "wrapper" block displaying as a flex column with a "vertical height" (vh) of 100.
-  That serves to cram the footer to the bottom of the page.
-*/
-
 .footer {
   flex-shrink: 0;
   padding: 1rem;
@@ -164,15 +120,8 @@ form {
   text-decoration: underline;
 }
 
-/*
-  This is an example of a 'pseudoclass'
-  In this instance, it says what to do if a mouse hovers over a link
-  This is pretty desktop-specific, since there's no hover function on touchscreens
-*/
 .footer a:hover {
-  /* Hue, saturation, luminosity, alpha */
   background-color: hsla(0, 0%, 90%, 0.15);
-  /* red, green, blue, alpha */
   color: rgb(246, 169, 93);
   text-decoration: none;
 }
@@ -183,8 +132,6 @@ form {
   margin-bottom: 5px;
 }
 
-
-/* Deploy this with images as direct "children" and the images should pop into shape */
 .grid {
   display: flex;
   justify-content: space-evenly;
@@ -199,8 +146,6 @@ form {
   height: 150px;
 }
 
-
-/* Carousel */
 div.carousel {
   max-width: 300px;
   overflow: hidden;
@@ -221,7 +166,6 @@ div.carousel {
   -webkit-overflow-scrolling: touch;
 }
 
-/* .carousel_item, */
 .hidden {
   display: none;
 }
@@ -231,17 +175,6 @@ div.carousel {
 }
 
 .carousel_item img {
-  /* 
-    Setting width, rather than max-width or min-width,
-    means annoying pop-ins won't happen
-    but it also means you need to format your images to be compatible
-    or they will stretch weird
-
-    - try a tall one and see what happens
-    - change the height on a fixed image size and see what happens
-    - now make sure that images are _always_ square
-    - ... there's a reason crop tools are popular in image editors
-   */
   width: 150px; 
 }
 
@@ -254,36 +187,27 @@ div.carousel {
   font-weight: bold;
   height: 45px;
   padding: 10px;
-  line-height: 0; /* This centers a button's text! */
-  border: 2px solid rgb(99,99,99); /* shorthand for how to do a border */
+  line-height: 0;
+  border: 2px solid rgb(99,99,99);
 }
 
 .prev:focus,
 .next:focus {
   margin: 0;
-  /* Pick a good border colour and check out how it works with your buttons */
   border: 4px solid rgb(114, 0, 185);
 }
 
 .prev:hover,
 .next:hover {
-  /* Pick a good background colour for your hover pseudoclass */
   background-color: rgb(239, 167, 94);
 }
 
 
-/*
-Form Styles
-*/
-
 form input {
-    /* This is a hack to make sure our boxes line up with one another nicely */
     width: 100%;
     width: -moz-available;          /* WebKit-based browsers will ignore this. */
     width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
     width: fill-available;
-
-    /* here we are setting white space correctly */
     margin-bottom: 1rem;
     height: 2rem;
     border-radius: 4px;
@@ -295,16 +219,11 @@ form input {
     width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
     width: fill-available;
     align-items: flex-start;
-
-    display: block; /* this turns the label text into a box we can set margins on */
+    display: block;
     margin-bottom: 0.5rem;
   }
 
-/* How To Write A Media Query For Small Screens */
-
 @media only screen and (max-width: 736px){
-    /* Rules in here will only apply when a screen is the correct size */
-    /* check it out by using your developer tools to shrink your screen-size */
     .container {
       background-color: rgba(255, 242, 176, 0.65);
       flex-direction: column;
@@ -321,11 +240,6 @@ form input {
   border: 2px dashed rgb(99,99,99);
   margin-bottom: 1rem; 
 }
-
-/* 
-    New code bonus: pure CSS data loading icon
-    This comes from loading.io/css - it's nice to show that something is happening!
-*/
 
 .lds-ellipsis {
     display: inline-block;
