--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ form {
 .footer {
   flex-shrink: 0;
   padding: 1rem;
-  background-color: rgba(138, 92, 255, 0.777);
+  background-color: #8ab3ff;
   font-size: 1.2rem;
   font-weight: 600;
 }
@@ -122,7 +122,7 @@ form {
 
 .footer a:hover {
   background-color: hsla(0, 0%, 90%, 0.15);
-  color: rgb(246, 169, 93);
+  color: rgb(14, 0, 211);
   text-decoration: none;
 }
 
